--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-google-charts": "^1.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vitejs/plugin-vue-jsx": "^2.1.1",
-    "vite": "^3.2.4",
-    "tailwindcss": "^3.0.11",
-    "@tailwindcss/forms": "^0.5.2",
-    "vue": "^3.2.25",
-    "vue-router": "^4.0.12",
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5"
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.11",
+    "vite": "^3.2.4",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.12"
   }
 }
